# utm-analytics-tg

./: .gitignore  alembic.ini  config.py  database.py  docker-compose.yml  loader.py  main.py  pyproject.toml  requirements.txt  scheduler_task.py
Farma_tg_bot/: Dockerfile  config.py  farma_app.db  loader.py  main.py  pyproject.toml
Farma_tg_bot/data/: story_content.py
Farma_tg_bot/db/: crud.py  db_helper.py  models.py
Farma_tg_bot/routers/: __init__.py  start.py
RPP_tg_bot/: .dockerignore  .gitignore  alembic.ini  config.py  loader.py  main.py  pyproject.toml
RPP_tg_bot/alembic/: env.py
RPP_tg_bot/data/: states.py
RPP_tg_bot/db/: db_helper.py
RPP_tg_bot/migrations/: env.py
RPP_tg_bot/routers/: __init__.py  novice.py  novice_continued.py  onboarding.py  pro.py  pro_continued.py  start.py  survey.py
RPP_tg_bot/utils/: scheduler.py
data/: story_content.py
db/: crud.py  db_helper.py  models.py
migrations/: env.py
migrations/versions/: a8fbcff743e6_init.py  b9e5f2475dfa_fix_id_autoincrement.py
nginx/: nginx.conf
routers/: novice.py  novice_continued.py  onboarding.py  pro.py  pro_continued.py  start.py  survey.py
utils/: common.py  keyboards.py  scheduler.py
